Quorum/Library/Tests/Expressions/Pass/AssignUndefinedToText.quorum
class Main 
    action Main
        text a = undefined
        output "We did it!"
    end
end