Quorum/Library/Tests/Expressions/Fail/ChangeConstantField.quorum
class ChangeConstant 
    constant text value = ""
    action Main
        value = "This cannot change"
    end
end